# feverrpc

./: .gitignore  CMakeLists.txt  client.cpp  dev-documentation.md  feverrpc.cpp  lock.cpp  main.cpp  makefile  readme.md  server.cpp  thread-test.cpp  utils.cpp
include/feverrpc/: feverrpc-client.hpp  feverrpc-server.hpp  feverrpc.hpp  threadmanager.hpp  utils.hpp
scripts/: copy.sh
src/: feverrpc-client.cpp  feverrpc-server.cpp  feverrpc.cpp  threadmanager.cpp  utils.cpp
tests/: client.cpp  server.cpp
